Fixed code colors to be more readable on projected slides by removing opacity

--- a/css/highlight.tomorrow-night-bright.css
+++ b/css/highlight.tomorrow-night-bright.css
@@ -2,35 +2,35 @@
 /* Original theme - https://github.com/chriskempson/tomorrow-theme */
 /* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
 .tomorrow-comment, pre .comment, pre .title {
-  color: #969896;
+  color: #1CFF1C;
 }
 
 .tomorrow-red, pre .variable, pre .attribute, pre .tag, pre .regexp, pre .ruby .constant, pre .xml .tag .title, pre .xml .pi, pre .xml .doctype, pre .html .doctype, pre .css .id, pre .css .class, pre .css .pseudo {
-  color: #d54e53;
+  color: #FF1C24;
 }
 
 .tomorrow-orange, pre .number, pre .preprocessor, pre .built_in, pre .literal, pre .params, pre .constant {
-  color: #e78c45;
+  color: #FF9B4C;
 }
 
 .tomorrow-yellow, pre .class, pre .ruby .class .title, pre .css .rules .attribute {
-  color: #e7c547;
+  color: #F3FF14;
 }
 
 .tomorrow-green, pre .string, pre .value, pre .inheritance, pre .header, pre .ruby .symbol, pre .xml .cdata {
-  color: #b9ca4a;
+  color: #6FFF00;
 }
 
 .tomorrow-aqua, pre .css .hexcolor {
-  color: #70c0b1;
+  color: #3BE2EB;
 }
 
 .tomorrow-blue, pre .function, pre .python .decorator, pre .python .title, pre .ruby .function .title, pre .ruby .title .keyword, pre .perl .sub, pre .javascript .title, pre .coffeescript .title {
-  color: #7aa6da;
+  color: #2176FF;
 }
 
 .tomorrow-purple, pre .keyword, pre .javascript .function {
-  color: #c397d8;
+  color: #FF17F7;
 }
 
 pre code {
@@ -42,4 +42,8 @@ pre code {
   line-height: 1.5;
   border: 1px solid #ccc;
   padding: 10px;*/
+}
+
+pre code * {
+  opacity: 1 !important;
 }
